Google sheet and dropdown update

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
         </div>
     <!-- end buttons div -->
 
+    <hr style="height:5px;border-width:10;color: #28a745; background-color:#28a745">
+
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown button
+        <button class="btn btn-success btn-lg dropdown-toggle !important" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          LC SUGAR CUBES
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="lcps.html">LCPs</a>
-          <a class="dropdown-item" href="abeokuta.html">Abeokuta</a>
-          <a class="dropdown-item" href="abuja.html">Abuja</a>
+          <a class="dropdown-item" href="lcs.html">CLICK TO VIEW ENVELOPS</a>          
         </div>
       </div>
     
