--- a/lcs.html
+++ b/lcs.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 <script src="jquery-2.1.4.js"></script>
@@ -12,7 +11,7 @@
         iframe {border: none;}
         </style>
 
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRqR43chIJiat9S15AXL-U1QJ_doh59Ms8pjvlAyS0rcabV-PNiCNpZf4JyOSU3Mwp_V_jLjHq5f4jy/pubhtml?gid=81845212&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRqR43chIJiat9S15AXL-U1QJ_doh59Ms8pjvlAyS0rcabV-PNiCNpZf4JyOSU3Mwp_V_jLjHq5f4jy/pubhtml?widget=true&amp;headers=false" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe>
     
 
 </body>
