--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
     <hr style="height:5px;border-width:10;color: #28a745; background-color:#28a745">
 
     <div class="dropdown">
-        <button class="btn btn-success btn-lg dropdown-toggle !important" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button onclick="window.location.href= 'lcs.html';" class="btn btn-success btn-lg dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           LC SUGAR CUBES
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item" href="lcs.html">CLICK TO VIEW ENVELOPS</a>          
         </div>
-      </div>
+    </div>
     
         
 <div class="main">
