--- a/index.html
+++ b/index.html
@@ -94,29 +94,29 @@
                 </div>
                 <div class="row tim-row" id="display-buttons" data-class="btn-info">
                     <div  class="col-md-3 col-sm-6">
-                        <a href="mailto:sunday.noah@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info">Sunday Ndubisi</a>
+                        <a href="mailto:sunday.noah@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Sunday Ndubisi</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:ekor.ibor@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info btn-fill">Ekor Ibor</a>
+                      <a href="mailto:ekor.ibor@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Ekor Ibor</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:oluwafemi.taiwo@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info">Oluwafemi Taiwo</a>
+                      <a href="mailto:oluwafemi.taiwo@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Oluwafemi Taiwo</a>
                     </div>
 
                     <div  class="col-md-3 col-sm-6">
-                      <a href="mailto:cassandra.eiremiokhae@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info btn-fill">Cassandra</a>
+                      <a href="mailto:cassandra.eiremiokhae@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Cassandra</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                    <a href="mailto:oyelade.raphael@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info">Raphael Oyelade</a>
+                    <a href="mailto:oyelade.raphael@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Raphael Oyelade</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                    <a href="mailto:marilyn.obeten@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info btn-fill">Marilyn Obeten</a>
+                    <a href="mailto:marilyn.obeten@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Marilyn Obeten</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:tabansi.ebuka@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info">Henry Tabansi</a>
+                      <a href="mailto:tabansi.ebuka@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Henry Tabansi</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:khatiia.svanidze@aiesec.net?subject=VIEW: Sugar Cube" class="btn btn-block btn-lg btn-info btn-fill">Khatia</a>
+                      <a href="mailto:khatiia.svanidze@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Khatia</a>
                     </div>
 
 
