Updated LCs full dropdown

--- a/index.html
+++ b/index.html
@@ -128,11 +128,25 @@
     <hr style="height:5px;border-width:10;color: #28a745; background-color:#28a745">
 
     <div class="dropdown">
-        <button onclick="window.location.href= 'lcs.html';" class="btn btn-success btn-lg dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn btn-success btn-lg dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           LC SUGAR CUBES
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="lcs.html">CLICK TO VIEW ENVELOPS</a>          
+          <a class="dropdown-item" href="lcps.html">LCPs</a>
+          <a class="dropdown-item" href="lc/abeokuta.html">Abeokuta</a>
+          <a class="dropdown-item" href="lc/abuja.html">Abuja</a>
+          <a class="dropdown-item" href="lc/akure.html">Akure</a>
+          <a class="dropdown-item" href="lc/benin.html">Benin</a>
+          <a class="dropdown-item" href="lc/benue.html">Benue</a>
+          <a class="dropdown-item" href="lc/calabar.html">Calabar</a>
+          <a class="dropdown-item" href="lc/enugu.html">Enugu</a>
+          <a class="dropdown-item" href="lc/ibadan.html">Ibadan</a>
+          <a class="dropdown-item" href="lc/ife.html">Ife</a>
+          <a class="dropdown-item" href="lc/ilorin.html">Ilorin</a>
+          <a class="dropdown-item" href="lc/jos.html">Jos</a>
+          <a class="dropdown-item" href="lc/lagos.html">Lagos</a>
+          <a class="dropdown-item" href="lc/port harcourt.html">Port Harcourt</a>
+          <a class="dropdown-item" href="lc/zaria.html">Zaria</a>          
         </div>
     </div>
     
