--- a/lc/enugu.html
+++ b/lc/enugu.html
@@ -12,7 +12,7 @@
         iframe {border: none;}
         </style>
 
- width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRydt08U0J7OXA_uHBfw50HrzRDvIHmQikZAHdFv7QoNBkot_3E_D7k3mgntu0h2bJTTiKEu2YeivD9/pubhtml?widget=true&amp;headers=false" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe>
     
 
 </body>
