--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                                 <hr>
                                 <p>
                                     Welcome to AIESEC in Nigeria Virtual Education Week. 
-                                    Your first ever AIESEC in Nigeria conference, are you ready to lead from home.
+                                    Your first ever AIESEC in Nigeria virtual National conference (history right?), are you ready to lead from home.
                                 </p>
                                 <p>
                                   ViEW 2020 is a 3-day virtual conference that engages members of AIESEC in Nigeria and focuses on developing the capacity needed for the current context. 
-                                  VIEW features topics like:
+                                  ViEW features topics like:
                                 </p>
                                 <hr>
                                 <h5><b>Working Remotely</b></h5>
