Update to Favicon and Footer added

--- a/index.html
+++ b/index.html
@@ -201,6 +201,18 @@
 
 <!-- end main -->
 
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© ViEW2020 <br>
+      <a style="color: white;">Developed With love by Ekor Ibor <br>& MC Nebula</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
+
 
 
 </body>
