--- a/index.html
+++ b/index.html
@@ -94,29 +94,29 @@
                 </div>
                 <div class="row tim-row" id="display-buttons" data-class="btn-info">
                     <div  class="col-md-3 col-sm-6">
-                        <a href="mailto:sunday.noah@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Sunday Ndubisi</a>
+                        <a href="mailto:sunday.noah@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info">Sunday Ndubisi</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:ekor.ibor@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Ekor Ibor</a>
+                      <a href="mailto:ekor.ibor@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info btn-fill">Ekor Ibor</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:oluwafemi.taiwo@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Oluwafemi Taiwo</a>
+                      <a href="mailto:oluwafemi.taiwo@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info">Oluwafemi Taiwo</a>
                     </div>
 
                     <div  class="col-md-3 col-sm-6">
-                      <a href="mailto:cassandra.eiremiokhae@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Cassandra</a>
+                      <a href="mailto:cassandra.eiremiokhae@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info btn-fill">Cassandra</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                    <a href="mailto:oyelade.raphael@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Raphael Oyelade</a>
+                    <a href="mailto:oyelade.raphael@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info">Raphael Oyelade</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                    <a href="mailto:marilyn.obeten@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Marilyn Obeten</a>
+                    <a href="mailto:marilyn.obeten@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info btn-fill">Marilyn Obeten</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:tabansi.ebuka@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info">Henry Tabansi</a>
+                      <a href="mailto:tabansi.ebuka@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info">Henry Tabansi</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <a href="mailto:khatiia.svanidze@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" class="btn btn-block btn-lg btn-info btn-fill">Khatia</a>
+                      <a href="mailto:khatiia.svanidze@aiesec.net?subject=VIEW2020%3A%20Sugar%20Cubes 🖂❤&body=Hello" target="_blank" class="btn btn-block btn-lg btn-info btn-fill">Khatia</a>
                     </div>
 
 
@@ -132,21 +132,21 @@
           LC SUGAR CUBES
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="lcps.html">LCPs</a>
-          <a class="dropdown-item" href="lc/abeokuta.html">Abeokuta</a>
-          <a class="dropdown-item" href="lc/abuja.html">Abuja</a>
-          <a class="dropdown-item" href="lc/akure.html">Akure</a>
-          <a class="dropdown-item" href="lc/benin.html">Benin</a>
-          <a class="dropdown-item" href="lc/benue.html">Benue</a>
-          <a class="dropdown-item" href="lc/calabar.html">Calabar</a>
-          <a class="dropdown-item" href="lc/enugu.html">Enugu</a>
-          <a class="dropdown-item" href="lc/ibadan.html">Ibadan</a>
-          <a class="dropdown-item" href="lc/ife.html">Ife</a>
-          <a class="dropdown-item" href="lc/ilorin.html">Ilorin</a>
-          <a class="dropdown-item" href="lc/jos.html">Jos</a>
-          <a class="dropdown-item" href="lc/lagos.html">Lagos</a>
-          <a class="dropdown-item" href="lc/port harcourt.html">Port Harcourt</a>
-          <a class="dropdown-item" href="lc/zaria.html">Zaria</a>          
+          <a class="dropdown-item" href="lcps.html"target="_blank" >LCPs</a>
+          <a class="dropdown-item" href="lc/abeokuta.html"target="_blank" >Abeokuta</a>
+          <a class="dropdown-item" href="lc/abuja.html"target="_blank" >Abuja</a>
+          <a class="dropdown-item" href="lc/akure.html"target="_blank" >Akure</a>
+          <a class="dropdown-item" href="lc/benin.html"target="_blank" >Benin</a>
+          <a class="dropdown-item" href="lc/benue.html"target="_blank" >Benue</a>
+          <a class="dropdown-item" href="lc/calabar.html"target="_blank" >Calabar</a>
+          <a class="dropdown-item" href="lc/enugu.html"target="_blank" >Enugu</a>
+          <a class="dropdown-item" href="lc/ibadan.html"target="_blank" >Ibadan</a>
+          <a class="dropdown-item" href="lc/ife.html"target="_blank" >Ife</a>
+          <a class="dropdown-item" href="lc/ilorin.html"target="_blank" >Ilorin</a>
+          <a class="dropdown-item" href="lc/jos.html"target="_blank" >Jos</a>
+          <a class="dropdown-item" href="lc/lagos.html"target="_blank" >Lagos</a>
+          <a class="dropdown-item" href="lc/port harcourt.html"target="_blank" >Port Harcourt</a>
+          <a class="dropdown-item" href="lc/zaria.html"target="_blank" >Zaria</a>          
         </div>
     </div>
     
